--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_primary_knode2"
         android:label="@string/app_name"
         android:name=".core.application.NewApplication"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_primary_knode2"
 
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsTk" >
