--- a/app/build.gradle
+++ b/app/build.gradle
@@ -179,6 +179,7 @@ dependencies {
     // Once https://issuetracker.google.com/128612536 is fixed this can be fixed.
     implementation "androidx.fragment:fragment-testing:$fragmentVersion"
     implementation "androidx.test:core:$androidXTestCoreVersion"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
 
     // AndroidX Test - JVM testing
     testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
